formatting, code cleanup, renaming et al